--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,82 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,900');
+
+h1{
+	font-family: 'Roboto', sans-serif;
+	font-size: 2em;
+	font-weight: 700;
+	color: #3C3C3C;
+}
+
+h2{
+	color: #FF5A5F;
+	font-size: 4vh;
+	margin: 0;
+	padding: 0;
+	font-family: 'roboto';
+}
+
+html{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	color: #333333;
+	background-color: #F5F5F5;
+}
+
+body{
+	width: 70%;
+    position: absolute;
+    left: 15%;
+    height: 100%;
+    margin: 0;
+    background-color: #F5F5F5;
+}
+
+.cardContainer{
+  height: fit-content;
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+align-items: center
+}
+
+.card{
+display: inline-block;
+width: 70%;
+height: 80vh;
+position: relative;
+background-color: #FFFFFF;
+margin: 7vh 0 7vh 0;
+-webkit-box-shadow: 3px 3px 22px -4px rgba(0,0,0,0.5);
+-moz-box-shadow: 3px 3px 22px -4px rgba(0,0,0,0.5);
+box-shadow: 3px 3px 22px -4px rgba(0,0,0,0.5);
+}
+
+.welcome{
+	text-align: center;
+	color: #FF5A5F;
+	font-size: 4vh;
+	font-weight: 900;
+	font-family: 'roboto';
+}
+
+
+.title{
+	text-align: center;
+	color: #FF5A5F;
+	font-size: 4vh;
+	font-weight: 400;
+	font-family: 'roboto';
+}
+
+
+.background{
+	position: absolute;
+	height: 100vh;
+	width: 100vw;
+	background-color: rgba(0, 0, 0, 0.25);
 }
 
 code {
