--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,14 @@ h2{
 	font-family: 'roboto';
 }
 
+h3{
+	color: #FF5A5F;
+	font-size: 2vh;
+	margin: 0;
+	padding: 0;
+	font-family: 'roboto';
+}
+
 html{
 	width: 100%;
 	height: 100%;
